[tool.poetry]
name = "hello_mkdocs"
version = "0.1.0"
description = ""
authors = ["Yanglin Li <yanglin@squareup.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

